Update general.css scrollbar in fullscreen fix #2268
fix #2268

--- a/js&css/extension/www.youtube.com/general/general.css
+++ b/js&css/extension/www.youtube.com/general/general.css
@@ -191,8 +191,9 @@ html[it-pathname='/feed/subscriptions'][it-collapse-of-subscription-sections='tr
 html[it-scroll-bar=hidden] body {overflow-y: overlay;}
 html[it-scroll-bar=hidden] ::-webkit-scrollbar {display: none;}
 html[it-scroll-bar=hidden],
-html[it-scroll-bar=hidden][dark] {
-    scrollbar-color: unset;
+html[it-scroll-bar=hidden][dark],
+html[it-scroll-bar=hidden] ytd-app {
+	scrollbar-color: unset;
 }
 /*--------------------------------------------------------------
 # ADD "SCROLL TO TOP"
